--- a/data-mining/introduction/customer-retention-case.html
+++ b/data-mining/introduction/customer-retention-case.html
@@ -459,14 +459,18 @@
 <p><strong>The Gym Case Study</strong></p>
 <p>They discovered that customers who did not train well, eventually drop out from the gym.
 Therefore, the goal was to model customers' training sessions in order to predict those who did not train well and prevent them from dropping out.</p>
-<p>Steps:
-- Customers have s list of exercises
-- The system records the exercises (and repetition) did during the workout
-- The system matches the exercises 
-- Train a classifier that is able to predict that someone is leaving the gym because he is unsatisfied
-    - The system update the profile each week
-    - Four weeks without training = dropout
-    - The idea of dropout needs to be defined properly (a customer who stops going to the gym in summer and comes back in summer is different from a customers who dropout and does not come back)</p>
+<p>Steps:</p>
+<ul>
+<li>Customers have s list of exercises</li>
+<li>The system records the exercises (and repetition) did during the workout</li>
+<li>The system matches the exercises </li>
+<li>Train a classifier that is able to predict that someone is leaving the gym because he is unsatisfied<ul>
+<li>The system update the profile each week</li>
+<li>Four weeks without training = dropout</li>
+<li>The idea of dropout needs to be defined properly (a customer who stops going to the gym in summer and comes back in summer is different from a customers who dropout and does not come back)</li>
+</ul>
+</li>
+</ul>
 <p>Practitioner who is about to leave the gym is training poorly. How can characterize the user behaviors? How long does it last?</p>
 <p>Many KPIs can be adopted to assess the training session: in this case, two indicators were identified:</p>
 <ol>
@@ -480,7 +484,7 @@ Therefore, the goal was to model customers' training sessions in order to predic
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 4, 2022 10:29:23</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 4, 2022 10:39:17</span>
       
         <br>
         Created:
