deploy: 817f9bf8b00480d23dafe821fb0aa7b01e7d3f8c

--- a/index.html
+++ b/index.html
@@ -582,6 +582,11 @@
 <li>Data acquisition and Processing</li>
 <li>Model Training</li>
 <li>Metrics</li>
+<li>LIBRARIES:<ul>
+<li>Scikit-learn (ML)</li>
+<li>Tensofrflow (DL)</li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
@@ -598,7 +603,7 @@ The two modules must be discussed within <em>15 days</em>.</p>
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 5, 2022 12:44:33</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 5, 2022 13:28:25</span>
       
         <br>
         Created:
