deploy: 05a31c7267d63d82f8042e694e8ac69daa842ea1

--- a/data-mining/weka-lab/census-data.html
+++ b/data-mining/weka-lab/census-data.html
@@ -872,19 +872,22 @@
 <ul>
 <li>Capital gain/loss are not relevant because many attributes are zero</li>
 <li>Age (we expect it to be linear but the majority of &gt;50k is in the range of 40 years)</li>
-<li>Work class is unbalanced (the majority of people works in private), coverage eis very low</li>
+<li>Work class is unbalanced (the majority of people works in private), coverage is very low</li>
 <li>Education number </li>
 <li>Marital status (interesting, married is different)</li>
 <li>Occupation (interesting)</li>
 </ul>
 <p>Education and education-num are perfectly correlated (it is duplicated).</p>
+<p><img alt="" src="census.jpg" /></p>
+<p>We can enhance accuracy by replacing missing values:</p>
+<p>Preprocess - filter - unsupervised - attribute - replacemissingvalues</p>
 
   <hr>
 <div class="md-source-file">
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 18, 2022 10:04:20</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 25, 2022 10:02:45</span>
       
         <br>
         Created:
