--- a/print_page.html
+++ b/print_page.html
@@ -2942,7 +2942,10 @@ The <strong>metric</strong> examines the prediction of the model and the label p
 <p>Education and education-num are perfectly correlated (it is duplicated).</p>
 <p><img alt="" src="data-mining/weka-lab/census.jpg" /></p>
 <p>We can enhance accuracy by replacing missing values:</p>
-<p>Preprocess - filter - unsupervised - attribute - replacemissingvalues</p></section><h1 class='nav-section-title-end'>Ended: DM - LAB</h1>
+<p>Preprocess - filter - unsupervised - attribute - replacemissingvalues</p>
+<h2 id="data-mining-weka-lab-census-data-apriori-algorithm">Apriori Algorithm</h2>
+<p>We apply discretization and perform a manual analysis of the data in order to identify any correlation between pairs of attributes.</p>
+<p><img alt="" src="data-mining/weka-lab/apriori.jpg" /></p></section><h1 class='nav-section-title-end'>Ended: DM - LAB</h1>
                         <h1 class='nav-section-title' id='section-ml-lab'>
                             ML - LAB <a class='headerlink' href='#section-ml-lab' title='Permanent link'>↵</a>
                         </h1>
