deploy: 0fb81159a1cc77338ec27c30e30310d25284c753

--- a/machine-learning/classification/deep-learning.html
+++ b/machine-learning/classification/deep-learning.html
@@ -1125,13 +1125,14 @@ The cost function:</p>
 <p>We can change weights and bias following <strong>gradients</strong> (the derivative of a function measures the sensitivity to change of the function value with respect to a change in its argument).</p>
 <p>We can minimize the loss function with a gradient descent approach that adjust weights in the following manner:</p>
 <p><img alt="" src="weight.jpg" /></p>
+<p><img alt="" src="dnn-train.jpg" /></p>
 
   <hr>
 <div class="md-source-file">
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">November 9, 2022 14:29:57</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">November 9, 2022 14:40:52</span>
       
         <br>
         Created:
