--- a/print_page.html
+++ b/print_page.html
@@ -2963,7 +2963,8 @@ The cost function:</p>
 <p><em>How to minimize the loss?</em> -&gt; adjusting the weights and the bias of every neuron</p>
 <p>We can change weights and bias following <strong>gradients</strong> (the derivative of a function measures the sensitivity to change of the function value with respect to a change in its argument).</p>
 <p>We can minimize the loss function with a gradient descent approach that adjust weights in the following manner:</p>
-<p><img alt="" src="machine-learning/classification/weight.jpg" /></p></section><h1 class='nav-section-title-end'>Ended: Classification</h1>
+<p><img alt="" src="machine-learning/classification/weight.jpg" /></p>
+<p><img alt="" src="machine-learning/classification/dnn-train.jpg" /></p></section><h1 class='nav-section-title-end'>Ended: Classification</h1>
                         <h1 class='nav-section-title' id='section-dm-lab'>
                             DM - LAB <a class='headerlink' href='#section-dm-lab' title='Permanent link'>↵</a>
                         </h1>
