--- a/machine-learning/seminar/ai-business.html
+++ b/machine-learning/seminar/ai-business.html
@@ -1079,6 +1079,7 @@
 
 <h1 id="ai-solutions-for-real-world-business">AI Solutions for Real-World Business</h1>
 <p>Presented by: <strong>Cosimo Fiorino</strong> - Head of Data Science</p>
+<p><em>c.fiorini@ammagamma.com</em></p>
 <p>The team of <em>Ammagamma</em> is various, composed not only by engineers, but also philosophers and designers.</p>
 <p>Their <strong>vision</strong> is to develop a society aware of the potentialities, implications and impacts of technology.</p>
 <p>As a <strong>mission</strong>, they offer the best choice instruments through the development of artificial intelligence innovative solutions.</p>
@@ -1136,7 +1137,7 @@
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">November 23, 2022 14:22:30</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">November 23, 2022 15:47:47</span>
       
         <br>
         Created:
