deploy: 7d1bc6dd37f882d774632cecb977b06214f1bffa

--- a/print_page.html
+++ b/print_page.html
@@ -3572,7 +3572,24 @@ They are widely used for a number of reasons:</p>
 <li>The GPU market is quite expensive and volatile</li>
 </ul>
 </li>
-</ul></section><h1 class='nav-section-title-end'>Ended: Classification</h1>
+</ul>
+<p>With <strong>external solutions</strong>, the hardware is rented through the PaaS paradigm (Cloud).</p>
+<ul>
+<li>Pros:<ul>
+<li>Hardware maintenance is not required</li>
+<li>No investment over time is required for hardware upgrades</li>
+<li>Dedicated server rooms are not required, energy consumption is not borne by the company</li>
+</ul>
+</li>
+<li>Cons:<ul>
+<li>In the long run, it tends to have higher costs</li>
+<li>Vendor lock-in</li>
+<li>We do not really know who the owner of the data is</li>
+<li>Privacy issues</li>
+</ul>
+</li>
+</ul>
+<p><img alt="" src="machine-learning/classification/ai.jpg" /></p></section><h1 class='nav-section-title-end'>Ended: Classification</h1>
                         <h1 class='nav-section-title' id='section-dm-lab'>
                             DM - LAB <a class='headerlink' href='#section-dm-lab' title='Permanent link'>↵</a>
                         </h1>
