--- a/machine-learning/classification/machine-vs-deep.html
+++ b/machine-learning/classification/machine-vs-deep.html
@@ -1256,13 +1256,30 @@
 </ul>
 </li>
 </ul>
+<p>With <strong>external solutions</strong>, the hardware is rented through the PaaS paradigm (Cloud).</p>
+<ul>
+<li>Pros:<ul>
+<li>Hardware maintenance is not required</li>
+<li>No investment over time is required for hardware upgrades</li>
+<li>Dedicated server rooms are not required, energy consumption is not borne by the company</li>
+</ul>
+</li>
+<li>Cons:<ul>
+<li>In the long run, it tends to have higher costs</li>
+<li>Vendor lock-in</li>
+<li>We do not really know who the owner of the data is</li>
+<li>Privacy issues</li>
+</ul>
+</li>
+</ul>
+<p><img alt="" src="ai.jpg" /></p>
 
   <hr>
 <div class="md-source-file">
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">November 30, 2022 14:38:50</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">November 30, 2022 15:42:49</span>
       
         <br>
         Created:
