deploy: 40e3000a8005d191cbc43356d838309969ed5318

--- a/machine-learning/seminar/ethics.html
+++ b/machine-learning/seminar/ethics.html
@@ -1226,13 +1226,21 @@ For example, emotion recognition can be labelled wrongly due to different cultur
 <p>On the other hand, what if AI is right but the human overcome the decision?
 And what if AI is wrong but it is so powerful that it can convince humans?</p>
 <p><em>Are we sure that we are completely free of biases?</em></p>
+<p>Right now, we have no answer to all these questions, because software development is not considered to be economically valuable.</p>
+<p>In order to design safe AI systems, we should follow these steps:</p>
+<ol>
+<li>Alignment </li>
+<li>Robustness</li>
+<li>Corrigibility </li>
+</ol>
+<p>Some countermeasures to adopt would be to use explainable models (deep learning, CNN and neural network are not explainable).</p>
 
   <hr>
 <div class="md-source-file">
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">November 30, 2022 15:29:51</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">November 30, 2022 16:05:12</span>
       
         <br>
         Created:
