--- a/print_page.html
+++ b/print_page.html
@@ -3852,7 +3852,15 @@ For example, emotion recognition can be labelled wrongly due to different cultur
 <p>Also, after some time, humans unconsciously trust AI and they no longer be able to spot errors.</p>
 <p>On the other hand, what if AI is right but the human overcome the decision?
 And what if AI is wrong but it is so powerful that it can convince humans?</p>
-<p><em>Are we sure that we are completely free of biases?</em></p></section><h1 class='nav-section-title-end'>Ended: ML - Seminar</h1></div>
+<p><em>Are we sure that we are completely free of biases?</em></p>
+<p>Right now, we have no answer to all these questions, because software development is not considered to be economically valuable.</p>
+<p>In order to design safe AI systems, we should follow these steps:</p>
+<ol>
+<li>Alignment </li>
+<li>Robustness</li>
+<li>Corrigibility </li>
+</ol>
+<p>Some countermeasures to adopt would be to use explainable models (deep learning, CNN and neural network are not explainable).</p></section><h1 class='nav-section-title-end'>Ended: ML - Seminar</h1></div>
 
 
 
