deploy: 1aa87295a84e9cdfc25e3ff6a046971905e679dc

--- a/print_page.html
+++ b/print_page.html
@@ -2139,9 +2139,11 @@
 </ul>
 <h2 id="index-assessment-method-exam">Assessment Method - EXAM</h2>
 <p>The exam consists in an oral exam on all the subjects (80%) of the course and an elaborate (20% - agreed with the teacher).</p>
-<p>The <strong>elaborate</strong> must be carried out in the <strong>Machine Learning</strong> module, choosing between:
-- Study and algorithm among those in the literature
-- Analysis of a data set with mining techniques</p>
+<p>The <strong>elaborate</strong> must be carried out in the <strong>Machine Learning</strong> module, choosing between:</p>
+<ul>
+<li>Study and algorithm among those in the literature</li>
+<li>Analysis of a data set with mining techniques</li>
+</ul>
 <p>There are no fixed dates for the exam, it can be defined with teachers along the whole academic year. 
 The two modules must be discussed within <em>15 days</em>.</p></section>
                         <h1 class='nav-section-title' id='section-data-mining'>
