--- a/index.html
+++ b/index.html
@@ -1325,9 +1325,11 @@
 </ul>
 <h2 id="assessment-method-exam">Assessment Method - EXAM</h2>
 <p>The exam consists in an oral exam on all the subjects (80%) of the course and an elaborate (20% - agreed with the teacher).</p>
-<p>The <strong>elaborate</strong> must be carried out in the <strong>Machine Learning</strong> module, choosing between:
-- Study and algorithm among those in the literature
-- Analysis of a data set with mining techniques</p>
+<p>The <strong>elaborate</strong> must be carried out in the <strong>Machine Learning</strong> module, choosing between:</p>
+<ul>
+<li>Study and algorithm among those in the literature</li>
+<li>Analysis of a data set with mining techniques</li>
+</ul>
 <p>There are no fixed dates for the exam, it can be defined with teachers along the whole academic year. 
 The two modules must be discussed within <em>15 days</em>.</p>
 
@@ -1336,7 +1338,7 @@ The two modules must be discussed within <em>15 days</em>.</p>
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 5, 2022 13:28:25</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">January 3, 2023 21:27:50</span>
       
         <br>
         Created:
